@startuml chore_master_entities

!function $add($a)
!return "<color:#87A96B>" + $a + "</color>"
!endfunction

!function $remove($a)
!return "<color:#BA0021>" + $a + "</color>"
!endfunction

skinparam backgroundColor transparent
skinparam linetype ortho

package identity {
  entity "User" {
    * reference: str <<PK>>
    * name: str
    * username: str
    * password: str
    --
    email: str
  }

  entity "Role" {
    * reference: str <<PK>>
    * symbol: str
  }

  entity "UserRole" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * role_reference: str <<FK>>
  }

  entity "UserSession" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * user_agent: str
    * is_active: bool
    * expired_time: datetime
    --
    deactivated_time: datetime
  }

  entity "UserAttribute" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * key: str
    * value: str
    --
  }
}

package trace {
  entity "Quota" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * limit: int
    * used: int
  }
}

package integration {
  entity "Operator" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * discriminator: str = \n | 'yahoo_finance_feed' \n $add("| 'node_manager'")
    * value: str
    --
    name: str
  }
}

package finance {
  entity "Asset" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * name: str
    * symbol: str
    * decimals: int
    * is_settleable: bool
  }

  entity "Price" {
    reference: str <<PK>>
    user_reference: str <<FK>>
    base_asset_reference: str <<FK>>
    quote_asset_reference: str <<FK>>
    value: str
    confirmed_time: datetime
  }

  entity "Account" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * settlement_asset_reference: str <<FK>>
    * name: str
    * opened_time: datetime
    --
    closed_time: datetime
  }

  entity "BalanceSheet" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * balanced_time: datetime
  }

  entity "BalanceEntry" {
    * reference: str <<PK>>
    * balance_sheet_reference: str <<FK>>
    * account_reference: str <<FK>>
    * amount: str
  }

  entity "Portfolio" {
    * reference: str <<PK>>
    * user_reference: str <<FK>>
    * name: str
    * settlement_asset_reference: str <<FK>>
    --
    description: str
  }

  entity "Transaction" {
    * reference: str <<PK>>
    * portfolio_reference: str <<FK>>
    * transacted_time: datetime
    --
    * chain_id: str
    * tx_hash: str
    * remark: str
  }

  entity "Transfer" {
    * reference: str <<PK>>
    * transaction_reference: str <<FK>>
    * flow_type: str = \n | 'COST' \n | 'EXPENSE' \n | 'REVENUE' \n | 'UPDATE_POSITION'
    * asset_amount_change: int
    * asset_reference: str <<FK>>
    --
    * settlement_asset_amount_change: int
    * remark: str
  }

  entity "IncomeStatementEntry" {
    * $add("reference: str <<PK>>")
    * $add("portfolio_reference: str <<FK>>")
    * $add("entry_type: str =") \n $add("| 'CAPITAL_GAIN'") \n $add("| 'CASH_DIVIDEND'") \n $add("| 'STAKING_YIELD'") \n $add("| 'FUNDING_FEE'") \n $add("| 'TRADE_FEE' | 'TAX_FEE' | 'GAS_FEE'")
    * $add("amount: int")
    * $add("asset_reference: str <<FK>>")
    * $add("settled_time: datetime")
  }

  entity "Holding" {
    * $add("reference: str <<PK>>")
    * $add("portfolio_reference: str <<FK>>")
    * $add("held_time: datetime")
  }

  entity "HoldingEntry" { 
    * $add("reference: str <<PK>>")
    * $add("holding_reference: str <<FK>>")
    * $add("instrument_reference: str <<FK>>")
    * $add("quantity: int")
    * $add("average_cost_price: int")
  }
}

'Zero or One  |o--
'Exactly One  ||--
'Zero or Many }o--
'One or Many  }|--

User                 ||--o{ UserRole
User                 ||--o{ UserSession
User                 ||--o{ UserAttribute
User                 ||--o{ Operator
User                 ||--o{ Account
User                 ||--o{ BalanceSheet
User                 ||--o{ Asset
User                 ||--o{ Price
User                 ||--o{ Portfolio
User                 ||--o{ Quota

UserRole             }o--|| Role

Price                }o--|| Asset: base_asset
Price                }o--|| Asset: quote_asset

Account              }o--|| Asset: settlement_asset

BalanceSheet         ||--o{ BalanceEntry: balance_entries

BalanceEntry         }o--|| Account

Portfolio            }o--|| Asset: settlement_asset
Portfolio            ||--o{ Transaction: transactions
Portfolio            ||--o{ IncomeStatementEntry: income_statement_entries
Portfolio            ||--o{ Holding: holdings

Transaction          ||--o{ Transfer: transfers

IncomeStatementEntry }o--|| Asset

Holding              ||--o{ HoldingEntry: holding_entries

@enduml